# yt-dlp-beets

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  toolchain-mingw64.cmake
resources/: beets.config.yaml  yt-dlp-beets.desktop.in  yt-dlp-beets.rc.in  yt-dlp-wrapper.py
scripts/: build-appimage.sh  build-bundle-win.sh  donwload-binaries-win.sh  download-binaries-linux.sh  download-binaries-win.sh
src/: App.cpp  App.hpp  AppState.hpp  Beets.cpp  Beets.hpp  GUI.cpp  GUI.hpp  Renderer.cpp  Renderer.hpp  SettingsUtil.cpp  SettingsUtil.hpp  Updater.cpp  Updater.hpp  Utils.cpp  Utils.hpp  imgui_additions.cpp  imgui_additions.hpp  main.cpp  python_setup.cpp  python_setup.hpp  yt-dlp.cpp  yt-dlp.hpp
